--- a/webclient/public/inc/printers.html
+++ b/webclient/public/inc/printers.html
@@ -4,7 +4,7 @@
 <form class="container" method="post" action="">
   <div class="hbox">
     <div class="printers-list">
-      <label for="#printer-list">Configured printers</label>
+      <label for="printer-list">Configured printers</label>
       <table id="printer-list" class="list printers">
         <tbody>
 
@@ -53,7 +53,7 @@
       <li><a href="#printers-bluetooth"><span>Bluetooth</span></a></li>
     </ul>
       <div id="printers-autodetected">
-        <label for="#autodetected-printers"><span>Detected Printers:</span></label>
+        <label for="autodetected-printers"><span>Detected Printers:</span></label>
         <table id="autodetected-printers" class="list printers">
           <tbody>
 
@@ -79,7 +79,7 @@
 
         <table class="widgets">
           <tr>
-            <td><label for="#printer-net-protocol">Protocol:</label></td>
+            <td><label for="printer-net-protocol">Protocol:</label></td>
             <td>
               <select name="printer-net-protocol" size="1" id="printer-net-protocol">
                 <option value="protocol-lpd">Unix Printing (LPD)</option>
@@ -89,15 +89,15 @@
             </td>
           </tr>
           <tr>
-            <td><label for="#printer-net-address">Address:</label></td>
+            <td><label for="printer-net-address">Address:</label></td>
             <td><input type="text" id="printer-net-address" name="printer-net-address" value="" /></td>
           </tr>
           <tr>
-            <td><label for="#printer-net-queue">Queue:</label></td>
+            <td><label for="printer-net-queue">Queue:</label></td>
             <td><input type="text" id="printer-net-queue" name="printer-net-queue" value="" /></td>
           </tr>
           <tr>
-            <td><label for="#printer-net-name">Name:</label></td>
+            <td><label for="printer-net-name">Name:</label></td>
             <td><input type="text" id="printer-net-name" name="printer-net-name" value="" /></td>
           </tr>
         </table>
